[package]
name = "mpeg2ts"
version = "0.5.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "MPEG2-TS decoding/encoding library"
homepage = "https://github.com/sile/mpeg2ts"
repository = "https://github.com/sile/mpeg2ts"
readme = "README.md"
keywords = ["mpeg2ts"]
license = "MIT"
edition = "2024"

[dependencies]

[dev-dependencies]
noargs = "0.4.1"
